# rust-practice

./: Cargo.toml  README.md
.cargo/: config.toml
01-FizzBuzz/: Cargo.toml  README.md
01-FizzBuzz/examples/: answer.rs
01-FizzBuzz/src/: main.rs
01-FizzBuzz/tests/: test.rs
02-Implements/: Cargo.toml  README.md
02-Implements/examples/: answer_derive.rs  answer_hard.rs
02-Implements/fixtures/: 01-monster.rs  02-default.rs  03-battle.rs  04-tame.rs  05-debug.rs  06-construction.rs  07-conversion.rs  08-compare.rs  09-clone.rs
02-Implements/src/: lib.rs
02-Implements/tests/: test.rs
03-ErrorHandling/: Cargo.toml  README.md
03-ErrorHandling/examples/: error_mapping.rs  thiserror.rs  thiserror_with_anyhow.rs
03-ErrorHandling/fixtures/: credentials.json  invalid_credentials.json
03-ErrorHandling/src/: lib.rs  main.rs
03-ErrorHandling/tests/: test.rs
