[package]
name = "fizz-buzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fizz-buzz"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
assert_cmd = { version = "2.0.12" }
indoc = { version = "2.0" }
