[package]
name = "error_handling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "error_handling"
path = "src/lib.rs"

[[bin]]
name = "error_handling"
path = "src/main.rs"

[dependencies]
base64 = { version = "0.21" }
bcrypt = { version = "0.15" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

thiserror = { version = "1.0" }
anyhow = { version = "1.0" }

[dev-dependencies]
serial_test = { version = "2.0" }
